--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,14 @@
         <meta name="description" content="Somos un Centro de Educación Integral enfocados en la estimulación temprana deportiva y especializados en gimnasia artistica inicial y avanzada">
         <title>Crecer: Academia de Gimnasia</title>
     </head>
-    <main>
+    <body>
+      <div class="banner">
+            <div class="container">
+              <h1>CRECER</h1>
+              <h2>Academia de Gimnasia y Centro de Estimulación temprana</h2>
+              <a href="https://wa.me/+5493434526485?text=Hola!%20Quisiera%20mas%20informaci%C3%B3n%20por%20favor..." class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+            </div>
+      </div>
       <div class="container">
         <div class="cards">
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
