--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,6 @@
+@import "config/fonts";
+@import "components/wpbutton";
+
 .card-category {
   background-size: cover;
   background-position: center;
