--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
     <body>
       <div class="banner">
             <div class="container">
-              <h1>CRECER</h1>
+              <h1>Crecer</h1>
               <h2>Academia de Gimnasia y Centro de Estimulación temprana</h2>
               <a href="https://wa.me/+5493434526485?text=Hola!%20Quisiera%20mas%20informaci%C3%B3n%20por%20favor..." class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
             </div>
