--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,15 +1,19 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&family=Playball&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: 'Handlee', cursive;
+$headers-font: 'Playball', cursive;
+
 /*Tipografia */
 h1 {
   font-size: 3.8rem;
+  font-weight: 700;
+  font-family: 'Playball', cursive;
 }
 h2 {
   font-size: 2.8rem;
+  font-family: 'Handlee', cursive;
 }
 h3 {
   font-size: 1.8rem;
