--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,6 +22,11 @@
   grid-gap: 16px;
 }
 
+a {
+	text-decoration: none;
+	font-weight: bolder;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
