--- a/app/assets/stylesheets/components/_wpbutton.scss
+++ b/app/assets/stylesheets/components/_wpbutton.scss
@@ -4,7 +4,7 @@
   height:60px;
   bottom:40px;
   right:40px;
-  background-color:#25d366;
+  background-color:#AA1229;
   color:#FFF;
   border-radius:50px;
   text-align:center;
