--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,8 @@
   <div class="card-footer">
     <nav>
       <ul>
-        <li class="footer-items"><a href="#"><i class="fab fa-github"></i></a></li>
-        <li class="footer-items"><a href="#"><i class="fab fa-facebook"></i></a></li>
-        <li class="footer-items"><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li class="footer-items"><a href="#"><i class="fab fa-linkedin"></i></a></li>
+        <li class="footer-items">Instagram: <a href="https://www.instagram.com/crecer.academiadegimnasia/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
+        <li class="footer-items">CEO: Abi Flores | Dimmas Kirolinko</li>
       </ul>
     </nav>
   </div>
