--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
               <a href="https://wa.me/+5493434526485?text=Hola!%20Quisiera%20mas%20informaci%C3%B3n%20por%20favor..." class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
             </div>
       </div>
-      <div class="container">
+      <div class="container mb-5">
         <div class="cards">
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1600821986515-3ef5b0f29f39?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=770&q=80)">
             Estimulación temprana
@@ -29,6 +29,9 @@
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1655842556432-ece48a4f2c1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80)">
             Gimnasia artistica
           </div>
+        </div>
+        <div class="card-info">
+          <p>¿Quieres potenciar las habilidades sociales y fisicas de tu niño/a? Conocemos las necesidades de nuestros niños/as! por eso tenemos clases adecuadas y especializadas para sus edades. Puedes ver nuestras distintas clases <button>AQUI</button></p>
         </div>
       </div>
     </body>
