--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
           </div>
 
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1655842556432-ece48a4f2c1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80)">
-            Gimnasia artistica
+            Gimnasia artística
           </div>
         </div>
         <div class="card-info">
