--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag("https://res.cloudinary.com/watchlistcreator/image/upload/v1664546982/development/logo_crecer_urgweu.png", class:"avatar-md rounded-circle", crop: :thumb) %>
     <% end %>
 
