--- a/app/views/profesors/index.html.erb
+++ b/app/views/profesors/index.html.erb
@@ -1,9 +1,17 @@
-<% @profesors.each do |profesor| %>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-      <h2>Product name</h2>
-      <p>Product description with <strong>relevant info</strong> only.</p>
-    </div>
+<div class="banner">
+  <div class="container">
+    <h1>Crecer</h1>
+    <h2>Profesores</h2>
   </div>
-<% end %>
+</div>
+<div class="container mb-5">
+  <% @profesors.each do |profesor| %>
+    <div class="card-product mb-2">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+      <div class="card-product-infos">
+        <h2><%= profesor.nombre %> <%= profesor.apellido %></h2>
+        <p><%= profesor.descripcion_profesor %></p>
+      </div>
+    </div>
+  <% end %>
+</div>
