profesors index view css

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,6 +28,8 @@ a:hover {
 	text-decoration: none;
 	font-weight: bolder;
 }
+
+// Profesores index
 .card-product {
   overflow: hidden;
   height: 120px;
