--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
 
         </div>
         <div class="card-info">
-          <p>¿Quieres potenciar las habilidades sociales y fisicas de tu niño/a? Conocemos las necesidades de nuestros niños/as! por eso tenemos clases adecuadas y especializadas para sus edades. Puedes ver nuestras distintas clases <button>AQUI</button></p>
+          <p>¿Quieres potenciar las habilidades sociales y fisicas de tu niño/a? Conocemos las necesidades de nuestros niños/as! por eso tenemos clases adecuadas y especializadas para sus edades. Puedes ver nuestras distintas clases <%= link_to "AQUI", clases_path %></p>
         </div>
       </div>
     </body>
