--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,6 @@
 @import "config/fonts";
 @import "components/wpbutton";
+@import "components/navbar";
 
 .card-category {
   background-size: cover;
