gem jquery installed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,15 @@
   <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <%# <link rel="stylesheet" type="text/css" href="css/style.css"> %>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Somos un Centro de Educación Integral enfocados en la estimulación temprana deportiva y especializados en gimnasia artistica inicial y avanzada">
         <title>Crecer: Academia de Gimnasia</title>
+
     </head>
     <body>
+    <%# asdasdsa %>
       <div class="banner">
             <div class="container">
               <h1>Crecer</h1>
