--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,9 +12,39 @@
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+}
+
+.card-image {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  transition: all 0.5s ease;
+}
+
+
+.card-overlay {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.261);
+  &:hover + .card-image {
+    width: 500px;
+  }
+}
+
+.card-over:hover {
+  background-color: red;
+}
+
+.card-text {
+  position: relative;
+  z-index: 3;
 }
 
 .cards {
@@ -22,12 +52,14 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
 }
+
 .card-info {
   margin: 2rem;
 }
+
 a:hover {
-	text-decoration: none;
-	font-weight: bolder;
+  text-decoration: none;
+  font-weight: bolder;
   color: black;
 }
 
@@ -36,7 +68,7 @@ a:hover {
   overflow: hidden;
   height: 120px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
 }
