--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,18 +20,29 @@
       </div>
       <div class="container mb-5">
         <div class="cards">
-          <a href="#"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1600821986515-3ef5b0f29f39?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=770&q=80)">
-            Estimulación temprana
-          </div></a>
+          <a href="#">
+			<div class="card-category">
+				<div class="card-overlay"></div>
+				<img src="https://images.unsplash.com/photo-1600821986515-3ef5b0f29f39?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=770&q=80" class="card-image">
+				<span class="card-text">Estimulación temprana</span>
+			</div>
+		  </a>
 
-          <a href="#"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1605524240886-403a29dc49ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80)">
-            Telas
-          </div></a>
+          <a href="#">
+			<div class="card-category">
+				<div class="card-overlay"></div>
+				<img src="https://images.unsplash.com/photo-1605524240886-403a29dc49ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80" class="card-image">
+				<span class="card-text">Telas</span>
+			</div>
+		  </a>
 
-
-          <a href="#"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1655842556432-ece48a4f2c1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80)">
-            Gimnasia artística
-          </div></a>
+		  <a href="#">
+			<div class="card-category">
+				<div class="card-overlay"></div>
+				<img src="https://images.unsplash.com/photo-1655842556432-ece48a4f2c1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="card-image">
+				<span class="card-text">Gimnasia artística</span>
+			</div>
+		  </a>
 
         </div>
         <div class="card-info">
