--- a/app/views/profesors/index.html.erb
+++ b/app/views/profesors/index.html.erb
@@ -8,7 +8,7 @@
   <div class="container mb-5 profesor-container">
     <% @profesors.each do |profesor| %>
       <div class="card-product">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <%= cl_image_tag current_user.foto.key  %>
         <div class="card-product-infos">
           <h2><%= profesor.nombre %> <%= profesor.apellido %></h2>
           <p><%= profesor.descripcion_profesor %></p>
