--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
           <li class="nav-item dropdown">
             <%= cl_image_tag current_user.foto.key, class: "avatar dropdown-toggle rounded-circle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Mi Perfil", "profesors_path", class: "dropdown-item" %>
+              <%= link_to "Mi Perfil", new_user_path, class: "dropdown-item" %>
               <%= link_to "Pagos", "#", class: "dropdown-item" %>
               <%= link_to "Cerrar sesión", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
