user  show view current user

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="main-wrapper" >
-  <div class="container mb-5 profesor-container">
+  <div class="container mb-5 user-container">
 
   </div>
 </div>
