--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,11 +2,22 @@
 <div class="banner">
   <div class="container">
     <h1>Crecer</h1>
-    <h2>Perfil</h2>
+    <h2>Mi Perfil</h2>
   </div>
 </div>
 <div class="main-wrapper" >
   <div class="container mb-5 profesor-container">
-
+  <div class="row g-4">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card">
+        <div class="card-body border-0 rounded bg-light shadow-lg text-center">
+          <%= cl_image_tag @user.foto.key, class:"avatar-square-shadow-xlg", crop: :thumb %>
+          <h5 class="my-3"><%= @user.nombre %></h5>
+          <div class="d-flex flex-column align-items-center justify-content-center">
+              <%= link_to "Editar perfil", edit_user_path, type: "button", class:"btn btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
+              <%#= link_to "Cancel", assitant_path(@assistant), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+            <%# <%= link_to "Add a review for this assistant", new_assistant_review_path(@assistant.id), type: "button", class:"btn btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
+          </div>
+        </div>
   </div>
 </div>
