--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,8 @@
   </div>
 </div>
 <div class="main-wrapper" >
-  <div class="container mb-5 profesor-container">
-  <div class="row g-4">
+  <div class="container mb-5 user-container">
+    <%# <div class="row g-4"> %>
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
         <div class="card-body border-0 rounded bg-light shadow-lg text-center">
@@ -19,5 +19,48 @@
             <%# <%= link_to "Add a review for this assistant", new_assistant_review_path(@assistant.id), type: "button", class:"btn btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-8">
+      <div class="card">
+        <div class="card-body border-0 rounded bg-light shadow-lg">
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mb-0">Nombre Completo</p>
+            </div>
+            <div class="col-sm-9">
+              <p class="text-muted mb-0"><%= @user.nombre %> <%= @user.apellido %></p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mb-0">Email</p>
+            </div>
+            <div class="col-sm-9">
+              <p class="text-muted mb-0"><%= @user.email %></p>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mb-0">Telefono</p>
+            </div>
+            <div class="col-sm-9">
+              <%# # aca va el telefono %>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mb-0">Direccion</p>
+            </div>
+            <div class="col-sm-9">
+              <%# # aca va la direccion %>
+            </div>
+          </div>
+          <hr>
+        </div>
+      </div>
   </div>
 </div>
