user show view card info

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,8 @@
     <h2>Mi Perfil</h2>
   </div>
 </div>
-<div class="main-wrapper" >
-  <div class="container mb-5 user-container">
-    <%# <div class="row g-4"> %>
+<div class="container main py-4">
+  <div class="row g-4">
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
         <div class="card-body border-0 rounded bg-light shadow-lg text-center">
@@ -44,7 +43,7 @@
           <hr>
           <div class="row">
             <div class="col-sm-3">
-              <p class="mb-0">Telefono</p>
+              <p class="mb-0">Teléfono</p>
             </div>
             <div class="col-sm-9">
               <%# # aca va el telefono %>
@@ -53,7 +52,7 @@
           <hr>
           <div class="row">
             <div class="col-sm-3">
-              <p class="mb-0">Direccion</p>
+              <p class="mb-0">Dirección</p>
             </div>
             <div class="col-sm-9">
               <%# # aca va la direccion %>
@@ -62,5 +61,6 @@
           <hr>
         </div>
       </div>
+    </div>
   </div>
 </div>
