--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <h1>Crecer</h1>
     <h2>Mi Perfil</h2>
-  <div class="container main py-4">
+    <div class="container main py-4">
     <div class="row g-4">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card">
@@ -45,6 +45,15 @@
             </div>
             <div class="col-sm-9">
               <%# # aca va el telefono %>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-sm-3">
+              <p class="mb-0">Nombre del alumno/a</p>
+            </div>
+            <div class="col-sm-9">
+              <p class="text-muted mb-0"><%= @user.alumnonombrecompleto %></p>
             </div>
           </div>
           <hr>
