--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -61,6 +61,9 @@
             <div class="col-sm-3">
               <p class="mb-0">Dirección</p>
             </div>
+            <div class="col-sm-9 mb-3">
+              <%# # aca va la direccion %>
+            </div>
           </div>
         </div>
       </div>
