--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-8">
-        <div class="card">
+        <div class="card mb-5">
           <div class="card-body border-0 rounded bg-light shadow-lg">
             <div class="row">
               <div class="col-sm-3">
