adding telefono y mas alumnos to seeds

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
                 <p class="mb-0">Teléfono</p>
               </div>
               <div class="col-sm-9">
-                <%# # aca va el telefono %>
+                <p class="text-muted mb-0"><%= @user.telefono %></p>
               </div>
             </div>
           <hr>
