--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,12 @@
     <div class="container main py-4">
       <div class="row g-4">
         <div class="col-12 col-md-6 col-lg-4">
-          <div class="card">
+          <div class="card mb-5">
             <div class="card-body border-0 rounded bg-light shadow-lg text-center">
               <%= cl_image_tag @user.foto.key, class:"avatar-square-shadow-xlg", crop: :thumb %>
               <h5 class="my-3"><%= @user.nombre %></h5>
               <div class="d-flex flex-column align-items-center justify-content-center">
-              <%= link_to "Editar perfil", edit_user_path, type: "button", class:"btn btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
+              <%= link_to "Editar perfil", edit_user_path, type: "button", class:"btn btn-outline-dark btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
               <%#= link_to "Cancel", assitant_path(@assistant), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
               <%# <%= link_to "Add a review for this assistant", new_assistant_review_path(@assistant.id), type: "button", class:"btn btn-soft profile-btn btn-sm mx-0 mt-2", style:"width: 70%;"%>
             </div>
@@ -52,7 +52,7 @@
                 <p class="mb-0">Nombre del alumno/a</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%= @user.alumnonombrecompleto %></p>
+                <p class="text-muted mb-0"><%= @user.alumnonombrecompleto %> <%= @user.alumnonombrecompleto1 %></p>
               </div>
             </div>
           <hr>
@@ -60,8 +60,8 @@
               <div class="col-sm-3">
                 <p class="mb-0">Dirección</p>
               </div>
-              <div class="col-sm-9 mb-3">
-                <%# # aca va la direccion %>
+              <div class="col-sm-9 mb-1">
+                <p class="text-muted mb-0"><%= @user.direccion %></p>
               </div>
             </div>
           </div>
