--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up", class:"btn btn-outline-dark btn-soft profile-btn btn-sm mx-0 mt-2" %>
+    <%= f.button :submit, "Sign up", class:"btn btn-outline-dark btn-soft profile-btn btn-sm mx-0 mt-2 mb-2" %>
   </div>
 <% end %>
 
