--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
     </head>
     <body>
-    <%# asdasdsa %>
+    <%# JSJAJSJ %>
       <div class="banner">
             <div class="container">
               <h1>Crecer</h1>
