--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<div class="card p-4 rounded shadow-lg" style="margin:1rem 0 0 0;">
+<div class="container mb-3">
+<div class="card p-4 rounded shadow-lg mb-4">
   <%= simple_form_for(@user) do |f| %>
     <div class="row justify-content-center align-items-center">
       <div class="col-12 col-md-6 col-lg-6">
@@ -17,11 +18,19 @@
       </div>
     </div>
     <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-md-6 col-lg-6">
+        <%= f.input :telefono, placeholder: "Teléfono", label: false %>
+      </div>
+      <div class="col-12 col-md-6 col-lg-6">
+        <%= f.input :direccion, placeholder: "Dirección", label: false  %>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center">
       <div class="col-12 col-md-12 col-lg-12">
         <%= f.input :foto, as: :file %>
       </div>
       <%= f.submit "Guardar cambios", id:"Sign-up-btn", class: "profile-btn w-75 btn-sm" %>
-    <div class="register">
+    <div class="register mb-3">
       <% if !current_user.nil? %>
         <%= link_to "Atrás", user_path, class:"register-btn" %>
       <% else %>
@@ -29,4 +38,5 @@
       <% end %>
     </div>
   <% end %>
+</div>
 </div>
