--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-6">
         <%= f.input :direccion, placeholder: "Dirección", label: false  %>
-      </div>
+      </div>..
     </div>
     <div class="row justify-content-center align-items-center">
       <div class="col-12 col-md-12 col-lg-12">
